Interim commit, cleaned all of getting selected application methods